data/derived/fa15/progs/unify/prog3526.ml.out
Characters 115-139:
  | n -> buildSine(build(rand, depth - 1));;
                  ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
